# drf_proect

./: .env  .gitignore  celerybeat-schedule.bak  pyproject.toml
config/: celery.py  settings.py  urls.py
users/: urls.py
users/migrations/: 0001_initial.py
vehicle/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_millage.py  0004_alter_millage_car_alter_millage_moto.py  0005_car_owner_moto_owner.py  0006_car_amount.py
